# wenyan-pc-rev

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  package-lock.json  package.json
docs/: ARCHITECTURE.md  DEVELOPMENT.md  RELEASE.md  STYLE.md  TESTING.md
scripts/: copy-welcome.js
src/: index.html  main.js  markdown_preview.html  right.js  styles.css
src-tauri/: Cargo.toml
src-tauri/resources/: README.md
src-tauri/src/: main.rs
src/fonts/: fonts.css
