[package]
name = "wenyan-rev"
version = "2.5.2"
description = "文颜-rev - 增强版多平台写作工具"
authors = ["caol64@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-message", "dialog-open", "http-all", "fs-write-file", "dialog-save", "window-close", "window-hide", "window-show", "window-unminimize", "window-start-dragging", "window-maximize", "window-minimize", "window-unmaximize", "fs-read-file", "fs-read-dir", "path-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard = "1.1.4"
# tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[dependencies.tauri-plugin-sql]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v1"
features = ["sqlite"] # or "postgres", or "mysql"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
